# minitalk

./: .gitignore  CMakeLists.txt  Makefile
Libft/: CMakeLists.txt  Makefile
Libft/includes/: libft.h
Libft/src/: ft_strjoin.c
Libft/src/print/: ft_printf.c
includes/: minitalk.h
src/: client.c  server.c
